--- a/assets/single-product-faq.css
+++ b/assets/single-product-faq.css
@@ -1,7 +1,7 @@
 .faq-section-wrapper {
     display: flex;
     justify-content: center;
-    padding-bottom: 30px;
+    padding-bottom: 20px;
 
 }
 .landing-faq-padding {
