--- a/assets/single-product-how.css
+++ b/assets/single-product-how.css
@@ -1,25 +1,23 @@
 .how-bg {
    padding-top: 50px;
-   padding-bottom: 50px;
+   /*padding-bottom: 50px;*/
    position: relative;
     min-height: 645px;
 }
 
 .how-products {
-    gap: 2.75rem;
+    margin-top: 20px;
+    gap: 3.5rem;
 }
 
-@media screen and (min-width: 391px) {
-    .how-products {
-        gap: 4.5rem;
-    }
+.how-bg .container {
+    overflow: visible;
 }
-
 
 .how-svg-1 {
     position: absolute;
     height: 100%;
-    padding: 0 2.875rem 0 4.375rem;
+    margin: 0 2.875rem 0 4.375rem;
     z-index: 1;
 }
 
@@ -62,12 +60,20 @@
     width: 110px;
     z-index: 2;
 }
+
+.single-product-block {
+    height: 112px;
+}
 @media screen and (min-width: 992px) {
+    .single-product-block {
+        height: unset;
+    }
     .how-bg {
         padding-top: 50px;
         padding-bottom: 70px;
     }
     .how-products {
+        margin-top: 0;
         gap: 0;
     }
 
@@ -82,7 +88,7 @@
 
     .how-svg-1 {
         top: 4.188rem;
-        width: 100%;
+        width: 90%;
     }
 
     .how-svg-2 {
